# simple-rust-server

./: Cargo.toml
src/: main.rs
src/apis/: greet.rs  groot.rs  mod.rs
