[package]
name = "server"
version = "0.1.0"
authors = ["joaopedropp <jp052@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version="3.1.0", features=["rustls"] }
serde = "1.0.116"
serde_json = "1.0.58"